# llm-terminal

./: .coverage  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_1.0.1.md  api_server.py  app.py  cache_db.py  cli.py  config.py  download_history.py  download_lifecycle.py  download_manager.py  download_service.py  download_status.py  hardware.py  hf_downloader.py  logging_.py  main.py  models.py  pyproject.toml  requirements-dev-linux.txt  requirements-dev-windows.txt  requirements-dev.txt  requirements-linux.txt  requirements-windows.txt  requirements.in  requirements.txt  results_layout.py  results_presenter.py  results_text.py  results_view.py  scoring.py  search_orchestration.py  service_client.py  themes.py  tui_app.py  utils.py
.planning/: roadmap.md
app/: download_manager.py  modals.py  search_constants.py  widgets.py
core/: __init__.py  cache_db.py  errors.py  hardware.py  http_client.py  logging_.py  model_intelligence.py  models.py  scoring.py  utils.py
docs/: structure.md
downloads/: __init__.py  download_history.py  download_lifecycle.py  download_manager.py  download_service.py  hf_downloader.py  service_client.py
providers/: __init__.py  docker_provider.py  hf_provider.py  lmstudio_provider.py  mlx_provider.py  ollama_provider.py
requirements/: requirements-dev-windows.txt  requirements-dev.in  requirements-windows.txt  requirements.txt
results/: __init__.py  results_layout.py  results_presenter.py
scripts/: dev.py  release_check.py  release_check_helpers.py  reset_all.bat  reset_downloads.py
search/: __init__.py  search_cache.py
terminal_ui/: __init__.py  __main__.py  app.py  theme.tcss
tests/: __init__.py  conftest.py  test_api_server.py  test_app_compact_mode.py  test_app_modal_polling.py  test_app_widgets.py  test_cache_db.py  test_dev_script.py  test_download_history.py  test_download_lifecycle.py  test_download_manager.py  test_download_service_debug.py  test_download_service_store.py  test_download_service_worker.py  test_download_status.py  test_hardware_expanded.py  test_helpers.py  test_hf_provider_helpers.py  test_live_platforms.py  test_main_entrypoint.py  test_model_intelligence.py  test_ollama_provider_helpers.py  test_ollama_scraping.py  test_plan_mode.py  test_provider_error_helpers.py  test_providers_extended.py  test_release_check_helpers.py  test_results_layout.py  test_results_presenter.py  test_results_text.py  test_results_view.py  test_scoring.py  test_scoring_ui.py  test_search_cache.py  test_smoke_modes.py  (+3 more)
(+11 files in other folders)
