[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-model-explorer"
version = "1.0.0"
description = "Terminal UI for discovering, comparing, and downloading local LLM models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "huggingface_hub>=0.27,<1.0",
    "psutil>=5.9,<7.0",
    "nvidia-ml-py>=12.560,<13.0",
    "requests>=2.32,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "rich>=13.9,<14.0",
    "textual>=0.86,<1.0",
    "pydantic-settings>=2.0,<3.0",
    "click>=8.0,<9.0",
    "loguru>=0.7,<1.0",
    "pyperclip>=1.8,<2.0",
]

[project.scripts]
ai-model-explorer = "main:main"
ai-model-explorer-cli = "cli:cli"

# ---------------------------------------------------------------------------
# Ruff — linter & formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "download_manager", "download_service", "hardware",
                     "models", "providers", "service_client", "utils",
                     "download_status", "search_cache"]

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["."]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
fail_under = 40
